syntax = "proto3";

package gophkeeper.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/patraden/ya-practicum-gophkeeper/api/gophkeeper/v1;proto";

service AdminService {
  rpc Unseal(UnsealRequest) returns (UnsealResponse);
}

service UserService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER_ROLE_USER = 1;
  USER_ROLE_ADMIN = 2;
}

enum SealStatus {
  SEAL_STATUS_UNSPECIFIED = 0;
  SEAL_STATUS_SEALED = 1;
  SEAL_STATUS_PARTIALLY_SEALED = 2;
  SEAL_STATUS_UNSEALED = 3;
}

message UnsealRequest {
  string key_piece = 1 [(buf.validate.field).string.min_len = 1];
}

message UnsealResponse {
  bool unsealed = 1;
  SealStatus status = 2;
  string message = 3;
}

message LoginRequest {
  string username = 1 [(buf.validate.field).string.min_len = 3];
  string password = 2 [(buf.validate.field).string.min_len = 8];
}

message LoginResponse {
  string token = 1;
  string user_id = 2;
  UserRole role = 3;
}

message RegisterRequest {
  string username = 1 [(buf.validate.field).string.min_len = 3];
  string password = 2 [(buf.validate.field).string.min_len = 8];
}

message RegisterResponse {
  string user_id = 1;
  string message = 2;
}
